--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,7 @@ section {
     justify-content: space-between;
     align-items: center;
     height: 62px;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .navbar .menu-items {
@@ -201,18 +202,32 @@ section {
 }
 
 #main_program_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     background-color: rgba(40, 43, 50, 1);
     color: rgba(255, 255, 255, 1);
     padding: 11px 12px;
 
+    div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
     h2 {
+        margin: 19px 0 36px;
         text-align: center;
         font-size: 20px;
         line-height: 28px;
         letter-spacing: -0.8px;
+
+        &::after {
+            content: "";
+            display: block;
+            width: 30px;
+            height: 2px;
+            background-color: rgb(160, 64, 56);
+            margin: 0 auto;
+            margin-top: 15px;
+        }
     }
 
 
@@ -229,6 +244,7 @@ section {
     }
 
     li {
+        height: min(82px);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -255,4 +271,90 @@ section {
 
     }
 
+    button {
+        width: fit-content;
+        align-self: center;
+        margin: 40px 0 15px;
+        border: none;
+        padding: 20px 50px;
+        background-color: rgba(255, 79, 56, 1);
+        color: #FFF;
+        font-weight: 900;
+        line-height: 28px;
+        letter-spacing: -0.16px;
+    }
+}
+
+#feature_container {
+    background-color: white;
+
+    h2 {
+        text-align: center;
+        margin: 14.49px 0 30px;
+
+        &::after {
+            content: "";
+            display: block;
+            margin: 5px auto 0;
+            width: 30px;
+            height: 2px;
+            background-color: rgba(160, 64, 56, 1);
+        }
+    }
+
+    ul {
+        display: grid;
+        justify-content: center;
+        padding: 0 8.5px;
+
+        img {
+            width: 106px;
+            justify-self: center;
+            align-self: center;
+        }
+
+        li {
+            display: grid;
+            grid-template-columns: auto 1fr;
+
+            .authors_description_container {
+                h3 {
+                    margin-top: 10.6px;
+                    color: #000;
+                    font-size: 15px;
+                    font-weight: 700;
+                    letter-spacing: -0.3px;
+                }
+
+                p:first-of-type {
+                    color: #F78C89;
+                    margin: 6.4px 0;
+                    font-size: 10px;
+                    font-weight: 700;
+                    line-height: 14.943px;
+                    letter-spacing: -0.2px;
+
+                    &::after {
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        margin-top: 6.4px;
+                        width: 17.789px;
+                        height: 1.423px;
+                        background-color: #D9D9D9;
+                    }
+                }
+
+                p:nth-of-type(2) {
+                    margin-top: 12px;
+                    color: #000;
+                    font-size: 9px;
+                    font-family: Lato;
+                    font-weight: 700;
+                    line-height: 14px;
+                    letter-spacing: -0.54px;
+                }
+            }
+        }
+    }
 }
