--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@ section {
     background-color: var(--tertiary-color);
 }
 
+button {
+    cursor: pointer;
+}
+
 .navbar {
     width: 100%;
     box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
@@ -302,6 +306,20 @@ section {
         }
     }
 
+    li:nth-of-type(n+1) {
+        display: grid;
+        grid-template-columns: auto 1fr;
+    }
+
+    li:nth-of-type(n+3) {
+        display: none;
+    }
+
+    .show_all li {
+        display: grid;
+        grid-template-columns: auto 1fr;
+    }
+
     ul {
         display: grid;
         justify-content: center;
@@ -314,9 +332,6 @@ section {
         }
 
         li {
-            display: grid;
-            grid-template-columns: auto 1fr;
-
             .authors_description_container {
                 h3 {
                     margin-top: 10.6px;
@@ -355,6 +370,30 @@ section {
                     letter-spacing: -0.54px;
                 }
             }
+        }
+    }
+
+    .show_btn_container {
+        display: flex;
+        justify-content: center;
+        margin: 30px 9.35px 32px;
+
+        .show_more_button {
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+            width: 100%;
+            padding: 12px 0;
+            border-radius: 4px;
+            border: 1px solid #DCDCDC;
+            box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+
+            p {
+                font-size: 11px;
+                font-weight: 700;
+                letter-spacing: -0.55px;
+            }
+
         }
     }
 }
