--- a/src/App.scss
+++ b/src/App.scss
@@ -397,3 +397,71 @@ button {
         }
     }
 }
+
+@media (min-width: 768px) {
+    #home_container {
+        margin-left: calc((100vw - 768px) / 6 + 10%);
+        margin-right: calc((100vw - 768px) / 6 + 20%);
+
+        #description_container {
+            #description {
+                font-size: 25.49px;
+                font-weight: 400;
+                line-height: 36.111px;
+                letter-spacing: -0.255px;
+            }
+        }
+
+        #event_info_container {
+            #event_day {
+                font-size: 42.484px;
+                font-weight: 900;
+                letter-spacing: -3.399px;
+            }
+
+            p {
+                font-size: 27.614px;
+                font-weight: 700;
+                letter-spacing: -0.552px;
+            }
+        }
+    }
+
+    #main_program_container {
+        padding: 56px 12px;
+
+        ul {
+            flex-direction: row;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 2.68px;
+
+
+            li {
+                width: 200px;
+                height: auto;
+                flex-direction: column;
+                padding: 0 18px 22px;
+
+                h2 {
+                    font-size: 24px;
+                    font-weight: 700;
+                    line-height: 28px;
+                    letter-spacing: -0.24px;
+                }
+
+                h3 {
+                    text-align: center;
+                }
+
+                p {
+                    text-align: center;
+                    font-size: 12px;
+                    font-weight: 700;
+                    line-height: 25px;
+                    letter-spacing: 0.72px;
+                }
+            }
+        }
+    }
+}
