--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,21 @@ section {
     background-color: var(--tertiary-color);
 }
 
+section:first-of-type {
+    background-image: url(./assets/background.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: calc(220px + ((100vw - 375px) / 2));
+
+    @media (width > 601px) {
+        background-size: calc(220px + ((100vw - 500px) / 2));
+    }
+
+    @media (width > 713px) {
+        background-size: calc(220px + ((100vw - 568px) / 2));
+    }
+}
+
 button {
     cursor: pointer;
 }
@@ -467,7 +482,7 @@ $menu-desktop-margin-right: 198px;
             gap: 2.68px;
 
             li {
-                width: 200px;
+                width: 166px;
                 height: auto;
                 flex-direction: column;
                 padding: 0 18px 22px;
@@ -500,7 +515,7 @@ $menu-desktop-margin-right: 198px;
 
             li {
                 .authors_description_container {
-                    width: 305px;
+                    width: min(305px, 100%);
 
                     h3 {
                         font-size: 24px;
@@ -523,6 +538,10 @@ $menu-desktop-margin-right: 198px;
                     }
                 }
             }
+        }
+
+        .show_btn_container {
+            display: none;
         }
     }
 }
